# pruebas

./: .gitignore
Arduino/Temperatura/: Temperatura.ino
Arduino/aw1e/: Clase1.cpp  Clase1.h  Constantemente.cpp  Constantemente.h  Contexto.h  aw1e.ino
Arduino/vacio/: vacio.ino
IoT/prueba1/: MyConnectionHandler.h  main.cpp
calc/calc/: Loader.cpp  Loader.h  Math.cpp  Math.h  ParserTarifa.cpp  ParserTarifa.h  Tarificador.cpp  Tarificador.h  log4cxx.properties  main.cpp  script.sql  vwze_dao.cpp  vwze_dao.h  vwze_entity.cpp  vwze_entity.h
cargo/: build.xml
cargo/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
cargo/script/: cargo.sql
cargoee/: build.xml
cargoee/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
cargoee/script/: mysql.sql
cargoee/web/: index.xhtml
cargogf/: build.xml
cargogf/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
csoft/: Makefile  Makefile.in  config.status  configure  configure.ac
csoft/autom4te.cache/: output.0  requests  traces.0  traces.1
csoft/csoft/: .gitignore  Makefile  Makefile.in  config.h  config.status  configure  configure.ac
csoft/csoft/src/: Csoft.cpp  Csoft.h  Makefile  Makefile.am  Makefile.in  main.c  main.cpp
csoft/csoft/src/.deps/: main.Po
csoft/csoft/src/mod1/: Worker1.cpp  Worker1.h
csoft/csoft/src/mod2/: Worker2.cpp  Worker2.h
csoft/src/: Makefile
fl/: build.xml
fl/nbproject/: build-impl.xml  genfiles.properties  (+2 more)
pipedrive/: manage.py
pruebasweb/: build.xml
python/: .pydevproject
(+163 files in other folders)
